[package]
name = "jung-core"
description = "Core rendering engine for geospatial symbology"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
jung-style = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ttf-parser = { workspace = true }

[dev-dependencies]
